Linked to previous post

--- a/_posts/2016-03-02-axelrod-1.md
+++ b/_posts/2016-03-02-axelrod-1.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Axelrod's model of cultural dissemination"
 date:   2016-03-02 10:18:25 -0800
 ---
-When introducing this basic grid in my previous post I made the off-hand statement that "proximity is 9/10ths of a relationship". This is something I remember hearing at one time and it has stayed with me. In 1997 [Robert Axelrod published](http://www-personal.umich.edu/~axe/research/Dissemination.pdf) his now famous model of cultural dissemination using cellular automata. The model gives computational and theoretical basis for studying the emergence of culture through the interactions between individuals. With simple rules the model enables study of the effect of individuals having similar traits becoming more similar, as well as the possible counter effect in which tendency toward local similarity leads to global polarization.
+When introducing this basic grid in my [previous post](http://qyoom.github.io/pathfinding-grid-1/) I made the off-hand statement that "proximity is 9/10ths of a relationship". This is something I remember hearing at one time and it has stayed with me. In 1997 [Robert Axelrod published](http://www-personal.umich.edu/~axe/research/Dissemination.pdf) his now famous model of cultural dissemination using cellular automata. The model gives computational and theoretical basis for studying the emergence of culture through the interactions between individuals. With simple rules the model enables study of the effect of individuals having similar traits becoming more similar, as well as the possible counter effect in which tendency toward local similarity leads to global polarization.
 
 ####How to win friends and influence other cellular automata
 
